--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
-Iready-Exploit:Sorry We Aren't Ready to Launch i-ready Exploit.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Account Management</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+</head>
+<body>
 
-<title>Iready-Exploit-home</title>
+<!-- Central container div -->
+<div id="container"></div>
+
+</body>
+</html>
