--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="button-container">
-        <button class="action-button" onclick="redirectToExample()">Iready Funds</button>
+        <button class="action-button" onclick="redirectToExample()">Iready Isane Exploit!</button>
     </div>
 
     <script>
