Update and rename update.aspx.html to update.html

--- a/update.html
+++ b/update.html
@@ -35,11 +35,11 @@
 
     <div class="update-card">
         <h2>Update: </h2>
-        <p>We've Will add more New Iready-Exploit!</p>
+        <p>We've Will add more New Iready-Exploit And More and we Make new One every sunday or monday sometimes thursday!</p>
     </div>
 
     <div id="upcoming-update">
-        <p><strong>Upcoming Update:</strong> Comes Soon.</p>
+        <p><strong>Upcoming Update:</strong> Comes Soon And Come here for more.</p>
     </div>
 
 </body>
